Malzeme ve Tarif Eklendi

--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Waffle</title>
+    <title>Waffle Tarifi</title>
 </head>
-<body>
+
+<body style="background-color: rgb(166, 245, 166);">
+    <header>
+        <h2><i><font color="yellow">. . . Tost Makinesinde Waffle Yapımı . . .</font></i></h2>
+        <br><h2>Tost Makinesinde Waffle Yapımı Tarifi İçin Malzemeler</h2>
+        <ul>
+            <li>1 su bardağı süt</li>
+            <li>Yarım çay bardağı şeker</li>
+            <li>Yarım çay bardağı sıvı yağ</li>
+            <li>1 yumurta</li>
+            <li>1 çay kaşığı kabartma tozu</li>
+            <li>1 paket vanilya</li>
+            <li>Yarım çay kaşığı tarçın (isteğe bağlı)</li>
+            <li>1,5 su bardağı un</li>
+        </ul>
+        <h2>Tost Makinesinde Waffle Yapımı Tarifi Nasıl Yapılır?</h2>
+        <ol>
+            <li>Yumurtayı ve şekeri köpürene kadar mikserle çırpıyoruz, ne kadar çırparsak yumurta kokusu az olur.</li>
+            <li>Yağı ve sütü ekleyip tekrar çırpıyoruz.</li>
+            <li>Son olarak vanilyayı kabartma tozunu ekliyoruz.</li>
+            <li>Unu yavaş yavaş ekleyerek akıcı (kek hamurundan daha akıcı) bir hamur elde ediyoruz.</li>
+            <li>Tost makinasının en sıcak derecesinde çok az yağ sürerek 1 kepçe hamur koyarak pişiriyoruz.</li>
+        </ol>
+        <br>
+    </header>
     
 </body>
 </html>
