Resimli Tarif Eklendi

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body style="background-color: rgb(166, 245, 166);">
     <header>
-        <h2><i><font color="yellow">. . . Tost Makinesinde Waffle Yapımı . . .</font></i></h2>
+        <h2><i><font color="blue">. . . Tost Makinesinde Waffle Yapımı . . .</font></i></h2>
         <br><h2>Tost Makinesinde Waffle Yapımı Tarifi İçin Malzemeler</h2>
         <ul>
             <li>1 su bardağı süt</li>
@@ -29,8 +29,29 @@
             <li>Unu yavaş yavaş ekleyerek akıcı (kek hamurundan daha akıcı) bir hamur elde ediyoruz.</li>
             <li>Tost makinasının en sıcak derecesinde çok az yağ sürerek 1 kepçe hamur koyarak pişiriyoruz.</li>
         </ol>
-        <br>
+        <br><p><b style="color: blue;">Not:</b>  Tost makinasını üstüne kapatıp pişiriyoruz ilk 1 dk kapağını açmayın. Çevirirken ters yöne koyun ki izler şekilli çıksın</p>
     </header>
+
+    <section>
+        <article style="position: relative; left: 500px; width: fit-content;">
+        <h2>Tost Makinesinde Waffle Yapımı Tarifi Fotoğraflı Yapılışı</h2>
+        <img src="img/tost-makinesinde-waffle-hamuru-foto-1.jpg" height="200" alt="tost-makinesinde-waffle-Yapım-fotosu">
+        <img src="img/tost-makinesinde-waffle-hamuru-foto-2.jpg" height="200" alt="tost-makinesinde-waffle-Yapım-fotosu">
+        <br>
+        <img src="img/tost-makinesinde-waffle-hamuru.jpg" height="400" alt="tost-makinesinde-waffle-Yapım-fotosu">
+    </article>
+
+    <aside>
+        <h2>Tost makinesinde waffle'ın Püf noktaları</h2>
+        <ul>
+            <li>Waffle hamurunun pişerken yaydığı kendine has kokusunun kaynağı vanilyadır. Tarifi hazırlarken vanilya eklemeyi ihmal etmeyin.</li>
+            <li>Waffle makinesi olmadan, tost makinesinde waffle şekli verebilmek için hamuru çevirirken diğer yönü ile de pişirmeniz tavsiye edilir.</li>
+        </ul>
+        <p>
+            <b style="position: relative; left: 950px; width: fit-content;" >Afiyet Olsun</b>
+        </p>
+    </aside>
+    </section>
     
 </body>
 </html>
