--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waffle Tarifi</title>
 </head>
-
-<body style="background-color: rgb(166, 245, 166);">
+<!-- Body başlangıcı -->
+<body style="background-color: rgb(166, 245, 166);"> <!-- Style ile arka alan renklendirmesi yapıldı-->
+    <!-- Header başlangıcı -->
     <header>
         <h2><i><font color="blue">. . . Tost Makinesinde Waffle Yapımı . . .</font></i></h2>
         <br><h2>Tost Makinesinde Waffle Yapımı Tarifi İçin Malzemeler</h2>
@@ -30,28 +31,34 @@
             <li>Tost makinasının en sıcak derecesinde çok az yağ sürerek 1 kepçe hamur koyarak pişiriyoruz.</li>
         </ol>
         <br><p><b style="color: blue;">Not:</b>  Tost makinasını üstüne kapatıp pişiriyoruz ilk 1 dk kapağını açmayın. Çevirirken ters yöne koyun ki izler şekilli çıksın</p>
+    <!-- Header bitişi -->
     </header>
 
+    <!-- Section başlangıcı -->
     <section>
+        <!-- Article başlangı -->
         <article style="position: relative; left: 500px; width: fit-content;">
-        <h2>Tost Makinesinde Waffle Yapımı Tarifi Fotoğraflı Yapılışı</h2>
-        <img src="img/tost-makinesinde-waffle-hamuru-foto-1.jpg" height="200" alt="tost-makinesinde-waffle-Yapım-fotosu">
-        <img src="img/tost-makinesinde-waffle-hamuru-foto-2.jpg" height="200" alt="tost-makinesinde-waffle-Yapım-fotosu">
-        <br>
-        <img src="img/tost-makinesinde-waffle-hamuru.jpg" height="400" alt="tost-makinesinde-waffle-Yapım-fotosu">
-    </article>
-
-    <aside>
-        <h2>Tost makinesinde waffle'ın Püf noktaları</h2>
-        <ul>
-            <li>Waffle hamurunun pişerken yaydığı kendine has kokusunun kaynağı vanilyadır. Tarifi hazırlarken vanilya eklemeyi ihmal etmeyin.</li>
-            <li>Waffle makinesi olmadan, tost makinesinde waffle şekli verebilmek için hamuru çevirirken diğer yönü ile de pişirmeniz tavsiye edilir.</li>
-        </ul>
-        <p>
-            <b style="position: relative; left: 950px; width: fit-content;" >Afiyet Olsun</b>
-        </p>
-    </aside>
+            <h2>Tost Makinesinde Waffle Yapımı Tarifi Fotoğraflı Yapılışı</h2>
+            <img src="img/tost-makinesinde-waffle-hamuru-foto-1.jpg" height="200" alt="tost-makinesinde-waffle-Yapım-fotosu">
+            <img src="img/tost-makinesinde-waffle-hamuru-foto-2.jpg" height="200" alt="tost-makinesinde-waffle-Yapım-fotosu">
+            <br>
+            <img src="img/tost-makinesinde-waffle-hamuru.jpg" height="400" alt="tost-makinesinde-waffle-Yapım-fotosu">
+        <!-- Article bitişi -->
+        </article>
+        <!-- Aside başlangıcı  -->
+        <aside>
+            <h2>Tost makinesinde waffle'ın Püf noktaları</h2>
+            <ul>
+                <li>Waffle hamurunun pişerken yaydığı kendine has kokusunun kaynağı vanilyadır. Tarifi hazırlarken vanilya eklemeyi ihmal etmeyin.</li>
+                <li>Waffle makinesi olmadan, tost makinesinde waffle şekli verebilmek için hamuru çevirirken diğer yönü ile de pişirmeniz tavsiye edilir.</li>
+            </ul>
+            <p>
+                <b style="position: relative; left: 950px; width: fit-content;" >Afiyet Olsun</b>
+            </p>
+        <!-- Aside bitişi -->
+        </aside>
+    <!-- Section bitişi-->
     </section>
-    
+<!-- Body bitişi -->
 </body>
 </html>
